@@ -38,15 +38,16 @@ import com.github.tomakehurst.wiremock.testsupport.MappingJsonSamples;
 import com.github.tomakehurst.wiremock.testsupport.WireMockResponse;
 import com.github.tomakehurst.wiremock.testsupport.WireMockTestClient;
 import java.io.*;
-import java.nio.charset.Charset;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.function.Predicate;
+import java.util.stream.Stream;
 import java.util.zip.GZIPInputStream;
-import org.apache.commons.io.FileUtils;
 import org.hamcrest.Description;
 import org.hamcrest.Matcher;
 import org.hamcrest.TypeSafeMatcher;
@@ -76,10 +77,11 @@ public class StandaloneAcceptanceTest {
 
   @BeforeEach
   public void init() throws Exception {
-    if (FILE_SOURCE_ROOT.exists()) {
-      FileUtils.deleteDirectory(FILE_SOURCE_ROOT);
+    if (new File(String.valueOf(FILE_SOURCE_ROOT.toPath().toAbsolutePath())).exists()) {
+      try (Stream<Path> pathStream = Files.walk(FILE_SOURCE_ROOT.toPath().toAbsolutePath())) {
+        pathStream.sorted(Comparator.reverseOrder()).map(Path::toFile).forEach(File::delete);
+      }
     }
-
     FILE_SOURCE_ROOT.mkdirs();
 
     mappingsDirectory = new File(FILE_SOURCE_ROOT, MAPPINGS);
@@ -101,7 +103,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void acceptsMappingRequestOnDefaultPort() throws Exception {
+  void acceptsMappingRequestOnDefaultPort() {
     startRunner();
     givenThat(
         get(urlEqualTo("/standalone/test/resource"))
@@ -122,14 +124,14 @@ public class StandaloneAcceptanceTest {
           + "}													";
 
   @Test
-  public void readsMappingFromMappingsDir() {
+  void readsMappingFromMappingsDir() {
     writeMappingFile("test-mapping-1.json", MAPPING_REQUEST);
     startRunner();
     assertThat(testClient.get("/resource/from/file").content(), is("Body from mapping file"));
   }
 
   @Test
-  public void readsMappingFromSpecifiedRecordingsPath() {
+  void readsMappingFromSpecifiedRecordingsPath() {
     String differentRoot = FILE_SOURCE_ROOT + separator + "differentRoot";
     writeFile(differentRoot + separator + underMappings("test-mapping-1.json"), MAPPING_REQUEST);
     startRunner("--root-dir", differentRoot);
@@ -137,7 +139,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void servesFileFromFilesDir() {
+  void servesFileFromFilesDir() {
     writeFileToFilesDir("test-1.xml", "<content>Blah</content>");
     startRunner();
     WireMockResponse response = testClient.get("/test-1.xml");
@@ -147,7 +149,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void servesFileFromSpecifiedRecordingsPath() {
+  void servesFileFromSpecifiedRecordingsPath() {
     String differentRoot = FILE_SOURCE_ROOT + separator + "differentRoot";
     writeFile(differentRoot + separator + underFiles("test-1.xml"), "<content>Blah</content>");
     startRunner("--root-dir", differentRoot);
@@ -158,7 +160,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void servesFileAsJsonWhenNoFileExtension() {
+  void servesFileAsJsonWhenNoFileExtension() {
     writeFileToFilesDir("json/12345", "{ \"key\": \"value\" }");
     startRunner();
     WireMockResponse response = testClient.get("/json/12345");
@@ -168,7 +170,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void shouldNotSend302WhenPathIsDirAndTrailingSlashNotPresent() {
+  void shouldNotSend302WhenPathIsDirAndTrailingSlashNotPresent() {
     writeFileToFilesDir(
         "json/wire & mock directory/index.json", "{ \"key\": \"index page value\" }");
     startRunner();
@@ -178,7 +180,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void servesJsonIndexFileWhenTrailingSlashPresent() {
+  void servesJsonIndexFileWhenTrailingSlashPresent() {
     writeFileToFilesDir("json/23456/index.json", "{ \"key\": \"new value\" }");
     startRunner();
     WireMockResponse response = testClient.get("/json/23456/");
@@ -188,7 +190,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void servesXmlIndexFileWhenTrailingSlashPresent() {
+  void servesXmlIndexFileWhenTrailingSlashPresent() {
     writeFileToFilesDir("json/34567/index.xml", "<blob>BLAB</blob>");
     startRunner();
     WireMockResponse response = testClient.get("/json/34567/");
@@ -198,7 +200,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void doesNotServeFileFromFilesDirWhenNotGET() {
+  void doesNotServeFileFromFilesDirWhenNotGET() {
     writeFileToFilesDir("json/should-not-see-this.json", "{}");
     startRunner();
     WireMockResponse response = testClient.put("/json/should-not-see-this.json");
@@ -252,7 +254,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void startsOnPortSpecifiedOnCommandLine() throws Exception {
+  public void startsOnPortSpecifiedOnCommandLine() {
     int port = findFreePort();
     startRunner("--port", "" + port);
     WireMock client = WireMock.create().host("localhost").port(port).build();
@@ -263,7 +265,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void proxiesToHostSpecifiedOnCommandLine() throws Exception {
+  void proxiesToHostSpecifiedOnCommandLine() {
     WireMock otherServerClient = startOtherServerAndClient();
     otherServerClient.register(
         get(urlEqualTo("/proxy/ok?working=yes")).willReturn(aResponse().withStatus(HTTP_OK)));
@@ -274,7 +276,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void respondsWithPreExistingRecordingInProxyMode() throws Exception {
+  void respondsWithPreExistingRecordingInProxyMode() {
     writeMappingFile("test-mapping-2.json", BODY_FILE_MAPPING_REQUEST);
     writeFileToFilesDir("body-test.xml", "Existing recorded body");
 
@@ -289,7 +291,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void recordsProxiedRequestsWhenSpecifiedOnCommandLineViaLegacyRecorder() throws Exception {
+  void recordsProxiedRequestsWhenSpecifiedOnCommandLineViaLegacyRecorder() throws Exception {
     WireMock otherServerClient = startOtherServerAndClient();
     startRunner("--record-mappings");
     givenThat(
@@ -308,7 +310,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void recordsRequestHeadersWhenSpecifiedOnCommandLineViaLegacyRecorder() throws Exception {
+  void recordsRequestHeadersWhenSpecifiedOnCommandLineViaLegacyRecorder() throws Exception {
     WireMock otherServerClient = startOtherServerAndClient();
     startRunner("--record-mappings", "--match-headers", "Accept");
     givenThat(
@@ -326,7 +328,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void recordsGzippedResponseBodiesDecompressedViaLegacyRecorder() {
+  void recordsGzippedResponseBodiesDecompressedViaLegacyRecorder() {
     WireMock otherServerClient = startOtherServerAndClient();
     startRunner("--record-mappings");
     givenThat(
@@ -358,12 +360,12 @@ public class StandaloneAcceptanceTest {
         Arrays.stream(requireNonNull(tempFileRoot.resolve("mappings").toFile().list()))
             .filter(name -> name.contains("record-this"))
             .findFirst()
-            .get(),
+            .orElse(""),
         endsWith(".json"));
   }
 
   @Test
-  public void matchesVeryLongHeader() {
+  void matchesVeryLongHeader() {
     startRunner("--jetty-header-buffer-size", "32678");
 
     String veryLongHeader = padRight("", 16336).replace(' ', 'h');
@@ -379,7 +381,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void performsBrowserProxyingWhenEnabled() throws Exception {
+  void performsBrowserProxyingWhenEnabled() {
     WireMock otherServerClient = startOtherServerAndClient();
     startRunner("--enable-browser-proxying");
     otherServerClient.register(
@@ -394,14 +396,14 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void doesNotRecordRequestWhenNotProxied() {
+  void doesNotRecordRequestWhenNotProxied() {
     startRunner("--record-mappings");
     testClient.get("/try-to/record-this");
     assertThat(mappingsDirectory, doesNotContainAFileWithNameContaining("try-to-record"));
   }
 
   @Test
-  public void doesNotRecordRequestWhenAlreadySeen() {
+  void doesNotRecordRequestWhenAlreadySeen() {
     WireMock otherServerClient = startOtherServerAndClient();
     startRunner("--record-mappings");
     givenThat(
@@ -418,7 +420,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void canBeShutDownRemotely() {
+  void canBeShutDownRemotely() {
     startRunner();
 
     WireMock.shutdownServer();
@@ -434,7 +436,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void canBeShutDownRemotelyWhenAsyncResponsesEnabled() {
+  void canBeShutDownRemotelyWhenAsyncResponsesEnabled() {
     startRunner("--async-response-enabled");
 
     stubFor(get("/delay-this").willReturn(ok().withFixedDelay(50)));
@@ -455,7 +457,7 @@ public class StandaloneAcceptanceTest {
   }
 
   @Test
-  public void isRunningReturnsFalseBeforeRunMethodIsExecuted() {
+  void isRunningReturnsFalseBeforeRunMethodIsExecuted() {
     runner = new WireMockServerRunner();
     assertThat(runner.isRunning(), is(false));
   }
@@ -473,7 +475,7 @@ public class StandaloneAcceptanceTest {
           + "}													";
 
   @Test
-  public void failsWithUsefulErrorMessageWhenMappingFileIsInvalid() {
+  void failsWithUsefulErrorMessageWhenMappingFileIsInvalid() {
     writeMappingFile("bad-mapping.json", BAD_MAPPING);
 
     MappingFileException exception = assertThrows(MappingFileException.class, this::startRunner);
@@ -501,11 +503,12 @@ public class StandaloneAcceptanceTest {
   }
 
   private String contentsOfFirstFileNamedLike(String namePart) throws IOException {
-    return FileUtils.readFileToString(firstFileWithNameLike(mappingsDirectory, namePart), UTF_8);
+    return Files.readString(
+        requireNonNull(firstFileWithNameLike(mappingsDirectory, namePart)).toPath());
   }
 
   private File firstFileWithNameLike(File directory, String namePart) {
-    for (File file : directory.listFiles(namedLike(namePart))) {
+    for (File file : requireNonNull(directory.listFiles(namedLike(namePart)))) {
       return file;
     }
 
@@ -576,7 +579,7 @@ public class StandaloneAcceptanceTest {
   }
 
   private String[] argsWithRecordingsPath(String[] args) {
-    List<String> argsAsList = new ArrayList<String>(asList(args));
+    List<String> argsAsList = new ArrayList<>(asList(args));
     if (!argsAsList.contains("--root-dir")) {
       argsAsList.addAll(asList("--root-dir", FILE_SOURCE_ROOT.getPath()));
     }
@@ -584,7 +587,7 @@ public class StandaloneAcceptanceTest {
   }
 
   private String[] argsWithPort(String[] args) {
-    List<String> argsAsList = new ArrayList<String>(asList(args));
+    List<String> argsAsList = new ArrayList<>(asList(args));
     if (!argsAsList.contains("--port")) {
       argsAsList.addAll(asList("--port", "" + Options.DYNAMIC_PORT));
     }
@@ -600,15 +603,15 @@ public class StandaloneAcceptanceTest {
   }
 
   private String systemOutText() {
-    return new String(out.toByteArray());
+    return out.toString();
   }
 
   private String systemErrText() {
-    return new String(err.toByteArray());
+    return err.toString();
   }
 
   private Matcher<File> containsAFileContaining(final String expectedContents) {
-    return new TypeSafeMatcher<File>() {
+    return new TypeSafeMatcher<>() {
 
       @Override
       public void describeTo(Description desc) {
@@ -617,9 +620,9 @@ public class StandaloneAcceptanceTest {
 
       @Override
       public boolean matchesSafely(File dir) {
-        for (File file : dir.listFiles()) {
+        for (File file : requireNonNull(dir.listFiles())) {
           try {
-            if (FileUtils.readFileToString(file, UTF_8).contains(expectedContents)) {
+            if (Files.readString(file.toPath()).contains(expectedContents)) {
               return true;
             }
           } catch (IOException e) {
@@ -633,7 +636,7 @@ public class StandaloneAcceptanceTest {
   }
 
   private Matcher<File> doesNotContainAFileWithNameContaining(final String namePart) {
-    return new TypeSafeMatcher<File>() {
+    return new TypeSafeMatcher<>() {
 
       @Override
       public void describeTo(Description desc) {
@@ -681,12 +684,12 @@ public class StandaloneAcceptanceTest {
 
       byte[] buf = new byte[8192];
 
-      int read = -1;
+      int read;
       while ((read = gin.read(buf)) != -1) {
         baos.write(buf, 0, read);
       }
 
-      return new String(baos.toByteArray(), Charset.forName(UTF_8.name()));
+      return baos.toString(UTF_8);
 
     } catch (IOException e) {
       return null;
@@ -694,8 +697,8 @@ public class StandaloneAcceptanceTest {
       if (gin != null)
         try {
           gin.close();
-        } catch (IOException e) {
-
+        } catch (IOException ignored) {
+          // ignored
         }
     }
   }
